Add to running tests and more. Start comments linking to new docs.
Also implement feedback from @will-morningstar

--- a/docs/alkiln/automated_testing.mdx
+++ b/docs/alkiln/automated_testing.mdx
@@ -1407,7 +1407,7 @@ Other than `DOCASSEMBLE_DEVELOPER_API_KEY`, this information can usually be publ
 
 ### ALKiln environment variables
 
-<!-- Moved to writing_tests.mdx#temp-server-reload -->
+<!-- Deleted in favor of the [SERVER_RELOAD_TIMEOUT_SECONDS input](writing_tests.mdx#githubNyou-optional-inputs), though I prefer the other name ~~Moved to writing_tests.mdx#temp-server-reload~~ -->
 
 There are some environment variables that ALKiln uses internally that don't need to be "inputs". They go under the `env:` section instead of under `with:`.
 
